--- a/src/App.css
+++ b/src/App.css
@@ -58,11 +58,52 @@
           justify-content: flex-end;
 }
 
+.skills > ul {
+  list-style: none;
+  padding: 0;
+}
+
+.skills > ul > ul {
+  padding-left: 20px;
+}
+
+.skills > ul > ul > li {
+  list-style: none;
+}
+
 .section {
   margin: 12rem 0;
 }
 
+.projects {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 8px;
+}
+
 .card {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 400px;
+          flex: 1 1 400px;
+  margin: 6px;
   background-color: #fafafa !important;
+}
+
+.card__img {
+  max-height: 100%;
+  max-width: 100%;
+  height: auto;
+  width: auto;
+}
+
+.card__description {
+  padding: 8px;
 }
 /*# sourceMappingURL=App.css.map */
