--- a/src/App.sass
+++ b/src/App.sass
@@ -32,10 +32,36 @@ $background-color: #fafafa
   flex-direction: column
   justify-content: flex-end
 
+
+//SKILLS
+.skills
+  & > ul
+    list-style: none
+    padding: 0
+    & > ul
+      padding-left: 20px
+      & > li
+        list-style: none
+
+
 ////////OTHEr
 .section
   margin: 12rem 0
 
-
+//PROJECTS
+.projects
+  display: flex
+  flex-direction: row
+  flex-wrap: wrap
+  margin: 8px
 .card
+  flex: 1 1 400px
+  margin: 6px
   background-color: $background-color !important
+  &__img
+    max-height: 100%
+    max-width: 100%
+    height: auto
+    width: auto
+  &__description
+    padding: 8px
