--- a/src/App.sass
+++ b/src/App.sass
@@ -65,3 +65,30 @@ $background-color: #fafafa
     width: auto
   &__description
     padding: 8px
+
+
+//CONTACT
+.contact
+  &__form
+    display: flex
+    flex-direction: column
+    max-width: 606px
+    margin-left: 8px
+    & > *
+      margin: 4px !important
+
+  &__button
+    &-wrapper
+      display: flex
+      justify-content: flex-end
+      &-inner
+        position: relative
+    &-progress
+      position: absolute
+      top: 50%
+      left: 50%
+      margin-top: -12px
+      margin-left: -12px
+
+.test
+  background-color: green
