--- a/src/App.sass
+++ b/src/App.sass
@@ -77,7 +77,6 @@ h2
           background-color: #3366c1
           color: white
           border-radius: 20px
-
           padding: 8px 16px
           margin: 8px
           margin-top: -4px
@@ -85,6 +84,7 @@ h2
           min-width: 80px
           display: inline-block
           text-align: center
+          font-weight: 500
           & + span
             margin-left: -4px
 
@@ -161,6 +161,8 @@ h2
     background-color: #1d396a !important
   &:active
     transform: translateY(1px)
+  &:focus
+    background-color: #1d396a !important
 
 //ANIMATIONS
 .about
