--- a/src/App.sass
+++ b/src/App.sass
@@ -148,7 +148,7 @@ h2
   margin: 8px
   background-color: $background-color !important
   border: 1px solid rgba(0,0,0,0.1)
-  border-top: 10px solid #3366c1
+  border-top: 10px solid #18356a
   &__img
     max-height: 100%
     max-width: 100%
