--- a/src/App.css
+++ b/src/App.css
@@ -263,7 +263,7 @@ h2 {
   margin: 8px;
   background-color: #fafafa !important;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  border-top: 10px solid #3366c1;
+  border-top: 10px solid #18356a;
 }
 
 .card__img {
