--- a/src/App.css
+++ b/src/App.css
@@ -243,6 +243,10 @@ h2 {
   margin: 12rem 0;
 }
 
+[id="1"], [id="2"] {
+  padding-top: 30px;
+}
+
 .projects {
   display: -webkit-box;
   display: -ms-flexbox;
